feat: adding new swagger doc
