# src/application/handlers/mood_handler.py
@@ -4,6 +4,8 @@ from flask import (
 )
 from src.infrastructure.db.repositories.mood_repository import MoodRepository
 from src.domain.entity.mood import Mood
+import uuid
+from datetime import datetime
 
 
 class MoodHandler:
@@ -23,20 +25,21 @@ class MoodHandler:
 
         for mood in moods:
             output.append(Mood(mood[0], mood[1], mood[2], mood[3],
-                                mood[4], mood[5], mood[6], mood[7]).get_value())
+                               mood[4], mood[5]).get_value())
 
         return jsonify(output), 200
 
     def handle_get_mood(mood_id: str):
         mood_repository = MoodRepository()
-        output = mood_repository.get_by_id(mood_id)
-        mood = Mood(output[0], output[1], output[2], output[3],
-                      output[4], output[5], output[6], output[7])
+        output = mood_repository.get_by_id(str(mood_id))
 
-        if output is None or mood is None:
+        if output is None:
             return jsonify({
-                "error": "mood not found"
+                "error": "Mood not found"
             }), 404
+
+        mood = Mood(output[0], output[1], output[2], output[3],
+                    output[4], output[5], output[6], output[7])
 
         output = mood.get_value()
 
@@ -51,8 +54,9 @@ class MoodHandler:
             }), 400
 
         try:
-            input = Mood(None, data.get('title'), data.get('description'), data.get('url'),
-                          data.get('duration'), data.get('thumbnail_url'), data.get('published_at'), data.get('channel_id'))
+            id = uuid.uuid4()
+            input = Mood(id, data.get('date'), data.get('feeling'), data.get('intensity'),
+                         data.get('comments'), data.get('activity'), datetime.now().strftime("%Y-%m-%d %H:%M:%S"), None)
 
             output = input.get_value()
 
@@ -61,10 +65,8 @@ class MoodHandler:
 
             if result is None:
                 return jsonify({
-                    "error": "mood not created"
+                    "error": "Mood not created"
                 }), 500
-
-            output['id'] = result
 
         except ValueError as e:
             return jsonify({
@@ -82,10 +84,13 @@ class MoodHandler:
             }), 400
 
         try:
-            input = Mood(None, data.get('title'), data.get('description'), data.get('url'),
-                          data.get('duration'), data.get('thumbnail_url'), data.get('published_at'), data.get('channel_id'))
+            mood_id = str(mood_id)
+            input = Mood(mood_id, data.get('date'), data.get('feeling'), data.get('intensity'),
+                         data.get('comments'), data.get('activity'))
 
             output = input.get_value()
+            output['updated_on'] = datetime.now().strftime("%Y-%m-%d %H:%M:%S")
+            del output['created_on']
 
             mood_repository = MoodRepository()
             result = mood_repository.update(input, mood_id)
@@ -94,7 +99,7 @@ class MoodHandler:
 
             if result is None:
                 return jsonify({
-                    "error": "mood not updated"
+                    "error": "Mood not updated"
                 }), 500
 
         except ValueError as e:
@@ -111,22 +116,21 @@ class MoodHandler:
             }), 400
 
         try:
-            mood_id = int(mood_id)
-
+            mood_id = str(mood_id)
             mood_repository = MoodRepository()
 
             mood = mood_repository.get_by_id(mood_id)
 
             if mood is None:
                 return jsonify({
-                    "error": "mood not found"
+                    "error": "Mood not found"
                 }), 404
 
             result = mood_repository.delete(mood_id)
 
             if result is None:
                 return jsonify({
-                    "error": "mood not deleted"
+                    "error": "Mood not deleted"
                 }), 500
 
         except ValueError as e:
@@ -135,5 +139,5 @@ class MoodHandler:
             }), 400
 
         return jsonify({
-            "message": "mood deleted successfully"
+            "message": "Mood deleted successfully"
         }), 200
